--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;500;700;1000&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <meta name="description" content="Curlified dedicated to revolutionizing the way you care for and style your curls">
     <title>Curlified</title>
 </head>
 
@@ -30,8 +31,8 @@
                 <img src="./assets/girl rond.png" alt="">
             </div>
             <div class="we-care-content-right">
-                <p class="title-light">We Care</p>
-                <h1 class="title-bold">Value your hair</span></h1>
+                <p class="title-light">We Offer,</p>
+                <h1 class="title-bold">Tailored range of</span></h1>
                 <div class="we-care-icons">
                     <div class="we-care-icons-group">
                         <img src="./assets/Group 48.png" alt="">
@@ -39,7 +40,7 @@
                     </div>
                     <div class="we-care-icons-group">
                         <img src="./assets/Group 49.png" alt="">
-                        <p>Cruellty<br />free</p>
+                        <p>Cruelty<br />free</p>
                     </div>
                     <div class="we-care-icons-group">
                         <img src="./assets/Group 50.png" alt="">
@@ -47,7 +48,7 @@
                     </div>
                     <div class="we-care-icons-group">
                         <img src="./assets/Group 5.png" alt="">
-                        <p>Paramban<br />free</p>
+                        <p>Paraban<br />free</p>
                     </div>
                 </div>
             </div>
@@ -60,25 +61,18 @@
             <p class="title-light">About</p>
             <h1 class="title-bold">Curlified</h1>
             <div class="spacer"></div>
-            <p class="about-content">Welcome to Curlified! We are dedicated to offering comprehensive solutions for all
-                your curly hair needs.
-                At Curlified, we understand the unique requirements of curls and the importance of giving them the
-                special attention they deserve. That's why we have meticulously curated a range of products that nourish
-                and enhance your curls, free from harsh chemicals and glycerin.</p>
+            <p class="about-content">Welcome to Curlified! We believe that every curl is unique and deserves the best care. We are dedicated to revolutionizing the way you care for and style your curls. Whether you have loose waves or tight coils, our curated collection of premium curly hair products will help you unlock the full potential of your beautiful curls.</p>
             <div class="spacer"></div>
             <p class="about-content">
-                Get ready for our upcoming launch, where you'll gain exclusive access to our handpicked collection
-                designed specifically for wavy, curly, and coily hair types.
-            </p>
-            <div class="spacer"></div>
-            <p class="about-content">
-                Embark on this exciting journey with us as we unlock the true potential of your curls, providing you
-                with the confidence and care you truly deserve.
+                Embark on this exciting journey with us as we unlock the true potential of your curls, providing you with confidence and care you truly deserve.
             </p>
             <div class="spacer"></div>
             <p class="about-content">
                 Stay tuned for more updates and be among the first to experience the Curlified difference.
             </p>
+            <div class="spacer"></div>
+            <h3 class="about-tag">EMBRACE YOUR CURLS WITH CURLIFIED</h3>
+
         </div>
     </div>
     <div class="bottom-container">
@@ -101,7 +95,7 @@
             </div>
             <div class="footer-group">
                 <h4>Contact us</h4>
-                <a href="">
+                <a href="mailto:mhd.anas.vp@gmail.com">
                     <p>info@curlified.com</p>
                 </a>
             </div>
@@ -118,7 +112,7 @@
     </div>
     <div id="popup" class="popup">
         <div class="popup-content">
-            <h4 id="popup-text">dfsfsdfsdfsdfsdf</h4>
+            <h4 id="popup-text"></h4>
             <button id="close-button">Close</button>
         </div>
     </div>
