--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="we-care-icons-group">
                         <img src="./assets/Group 5.png" alt="">
-                        <p>Paraban<br />free</p>
+                        <p>Paraben<br />free</p>
                     </div>
                 </div>
             </div>
